--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             <a href="test/index.html">Test MongoDB</a>
         </li>
         <li>
-            <a href="#">Your public repository at GitHub.com</a>
+            <a href="https://github.com/mikeknitz/knitz-michael-webdev">Github Repository</a>
         </li>
     </ul>
 </body>
