--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Web Dev Course Home Page</title>
-</head>
-<body>
-    <h1>Web Dev Course Home Page</h1>
-
-    <p>
-        Customize this home page to your linking.
-    </p>
-
-    <h2>Required links</h2>
-    <ul>
-        <li>
-            <a href="project/index.html">Project</a>
-        </li>
-        <li>
-            <a href="assignment/index.html">Assignment</a>
-        </li>
-        <li>
-            <a href="test/index.html">Test MongoDB</a>
-        </li>
-        <li>
-            <a href="https://github.com/mikeknitz/knitz-michael-webdev">Github Repository</a>
-        </li>
-    </ul>
-</body>
+  <head>
+	<meta charset="UTF-8">
+	<title>Mike Knitz CS 5610</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+	<link href="style.css" rel="stylesheet"/>
+  </head>
+  <body>
+	<div class="main">
+	  <h1>Mike Knitz CS 5610</h1>
+	  <h4>Coursework for the Fall 2016 semester</h4>
+	  <ul>
+		<li>
+		  <a href="project/index.html">Project</a>
+		</li>
+		<li>
+		  <a href="assignment/index.html">Assignment</a>
+		</li>
+		<li>
+		  <a href="test/index.html">Test MongoDB</a>
+		</li>
+		<li>
+		  <a href="https://github.com/mikeknitz/knitz-michael-webdev">Github Repository</a>
+		</li>
+	  </ul>
+	</div>
+  </body>
 </html>
