--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Assignment Home Page</title>
+  <meta charset="UTF-8">
+  <title>Assignment Home Page</title>
 </head>
 <body>
-    <h1>Assignment Home Page</h1>
+
+<h1>Assignment Home Page</h1>
+<ul>
+  <li><a href="login.html">login.html</a></li>
+  <li><a href="profile.html">profile.html</a></li>
+  <li><a href="register.html">register.html</a></li>
+</ul>
+
 </body>
 </html>
