--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <title>Assignment Home Page</title>
 </head>
 <body>
 
-<h1>Assignment Home Page</h1>
-<ul>
-  <li><a href="login.html">login.html</a></li>
-  <li><a href="profile.html">profile.html</a></li>
-  <li><a href="register.html">register.html</a></li>
-</ul>
+<div class="container-fluid">
+  <h1>Assignment Home Page</h1>
+  <ul>
+    <li><a href="login.html">login.html</a></li>
+    <li><a href="profile.html">profile.html</a></li>
+    <li><a href="register.html">register.html</a></li>
+  </ul>
+</div>
 
 </body>
 </html>
