--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -10,9 +10,9 @@
 <div class="container-fluid">
   <h1>Assignment Home Page</h1>
   <ul>
-    <li><a href="login.html">login.html</a></li>
-    <li><a href="profile.html">profile.html</a></li>
-    <li><a href="register.html">register.html</a></li>
+    <li><a href="user_pages/login.html">login.html</a></li>
+    <li><a href="user_pages/profile.html">profile.html</a></li>
+    <li><a href="user_pages/register.html">register.html</a></li>
   </ul>
 </div>
 
