changed html headings for assignment pages

--- a/public/assignment/user_pages/profile.html
+++ b/public/assignment/user_pages/profile.html
@@ -28,7 +28,6 @@
   </div>
 </nav>
 
-
 <div class="container">
   <h1>Profile</h1>
 
@@ -52,9 +51,10 @@
   </form>
 
   <a class="btn btn-primary btn-block"
-     href="website-list.html">Websites</a>
+     href="../website_pages/website-list.html">Websites</a>
   <a class="btn btn-danger  btn-block"
      href="login.html">Logout</a>
+
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
