--- a/public/assignment/user_pages/login.html
+++ b/public/assignment/user_pages/login.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
+
 <div class="container-fluid">
   <h1>Login</h1>
   <div class="form-group">
@@ -22,5 +24,6 @@
        href="register.html">Register</a>
   </div>
 </div>
+
 </body>
 </html>
