--- a/public/assignment/user_pages/register.html
+++ b/public/assignment/user_pages/register.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/style.css" rel="stylesheet"/>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="container">
-        <h1>Register</h1>
-        <input type="text"
-               class="form-control"
-               placeholder="username"/>
-        <input type="password"
-               class="form-control"
-               placeholder="password"/>
-        <input type="password"
-               class="form-control"
-               placeholder="very password"/>
-        <a class="btn btn-primary btn-block"
-           href="profile.html">Register</a>
-        <a class="btn btn-danger  btn-block"
-           href="login.html">Cancel</a>
-    </div>
+
+<div class="container">
+  <h1>Register</h1>
+  <input type="text"
+         class="form-control"
+         placeholder="username"/>
+  <input type="password"
+         class="form-control"
+         placeholder="password"/>
+  <input type="password"
+         class="form-control"
+         placeholder="very password"/>
+  <a class="btn btn-primary btn-block"
+     href="profile.html">Register</a>
+  <a class="btn btn-danger  btn-block"
+     href="login.html">Cancel</a>
+</div>
+
 </body>
 </html>
