--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-	<meta charset="UTF-8">
-	<title>Mike Knitz CS 5610</title>
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-	<link href="style.css" rel="stylesheet"/>
-  </head>
-  <body>
-	<div class="main">
-	  <h1>Mike Knitz CS 5610</h1>
-	  <h4>Coursework for the Fall 2016 semester</h4>
-	  <ul>
-		<li>
-		  <a href="project/index.html">Project</a>
-		</li>
-		<li>
-		  <a href="assignment/index.html">Assignment</a>
-		</li>
-		<li>
-		  <a href="test/index.html">Test MongoDB</a>
-		</li>
-		<li>
-		  <a href="https://github.com/mikeknitz/knitz-michael-webdev">Github Repository</a>
-		</li>
-	  </ul>
-	</div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Mike Knitz CS 5610</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="style.css" rel="stylesheet"/>
+</head>
+<body>
+<div class="main">
+  <h1>Mike Knitz CS 5610</h1>
+  <h4>Coursework for the Fall 2016 semester</h4>
+  <ul>
+    <li>
+      <a href="project/index.html">Project</a>
+    </li>
+    <li>
+      <a href="assignment/index.html">Assignment</a>
+    </li>
+    <li>
+      <a href="test/index.html">Test MongoDB</a>
+    </li>
+    <li>
+      <a href="https://github.com/mikeknitz/knitz-michael-webdev">Github Repository</a>
+    </li>
+  </ul>
+</div>
+</body>
 </html>
