--- a/public/assignment/user_pages/profile.html
+++ b/public/assignment/user_pages/profile.html
@@ -10,17 +10,13 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-    <div class="row navbar-header">
+    <div class="row">
       <div class="col-xs-6">
-        <a class="navbar-brand" href="#">
-          Profile
-        </a>
+        <a class="navbar-brand pull-left" href="#">Profile</a>
       </div>
       <div class="col-xs-6">
-        <p class="navbar-text text-right">
-          <a href="#" class="navbar-link">
-            <span class="glyphicon glyphicon-ok"></span>
-          </a>
+        <p class="navbar-text pull-right">
+          <a class="navbar-link" href="#"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
       </div>
     </div>
