implemented website-list.html

--- a/public/assignment/website_pages/website-list.html
+++ b/public/assignment/website_pages/website-list.html
@@ -7,3 +7,67 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 </head>
 <body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6 navbar-header">
+        <div class="navbar-brand">
+          <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="navbar-link" href="#">Websites</a>
+        </div>
+      </div>
+      <div class="col-xs-6">
+        <p class="navbar-text pull-right">
+          <a class="navbar-link" href="#"><span class="glyphicon glyphicon-plus"></span></a>
+        </p>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid link-margin">
+  <div class="row">
+    <div class="col-xs-6">
+      <a href="#">Address Book App</a>
+    </div>
+    <div class="col-xs-6 text-right">
+      <a href="#"><span class="glyphicon glyphicon-cog"></span></a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-6">
+      <a href="#">Blogger</a>
+    </div>
+    <div class="col-xs-6 text-right">
+      <a href="#"><span class="glyphicon glyphicon-cog"></span></a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-6">
+      <a href="#">Blogging App</a>
+    </div>
+    <div class="col-xs-6 text-right">
+      <a href="#"><span class="glyphicon glyphicon-cog"></span></a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-6">
+      <a href="#">Script Testing App</a>
+    </div>
+    <div class="col-xs-6 text-right">
+      <a href="#"><span class="glyphicon glyphicon-cog"></span></a>
+    </div>
+  </div>
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+    <div class="navbar-text pull-right">
+      <a href="#"><span class="glyphicon glyphicon-user"></span></a>
+    </div>
+  </div>
+</nav>
+
+</body>
+</html>
