--- a/public/assignment/user_pages/profile.html
+++ b/public/assignment/user_pages/profile.html
@@ -11,8 +11,8 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-6">
-        <a class="navbar-brand pull-left" href="#">Profile</a>
+      <div class="col-xs-6 navbar-header">
+        <a class="navbar-brand" href="#">Profile</a>
       </div>
       <div class="col-xs-6">
         <p class="navbar-text pull-right">
@@ -23,7 +23,7 @@
   </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
   <h1>Profile</h1>
 
   <form>
