--- a/public/assignment/page_pages/page-edit.html
+++ b/public/assignment/page_pages/page-edit.html
@@ -7,3 +7,101 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 </head>
 <body>
+
+<div class="hidden-xs">
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="row">
+
+      <div class="col-xs-4 container-fluid">
+        <div class="navbar-brand">
+          <a href="page-list.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="navbar-link" href="#">Pages</a>
+        </div>
+        <p class="navbar-text pull-right">
+          <a class="navbar-link" href="page-new.html"><span class="glyphicon glyphicon-plus"></span></a>
+        </p>
+      </div>
+
+      <div class="col-xs-8 container-fluid">
+        <div class="navbar-brand">
+          <a class="navbar-link" href="page-edit.html">Edit Page</a>
+        </div>
+        <p class="navbar-text pull-right">
+          <a class="navbar-link" href="page-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+        </p>
+      </div>
+
+    </div>
+  </nav>
+</div>
+
+<div class="visible-xs">
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-brand">
+        <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+        <a class="navbar-link" href="page-list.html">Edit Page</a>
+      </div>
+      <p class="navbar-text pull-right">
+        <a class="navbar-link" href="page-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+      </p>
+    </div>
+  </nav>
+</div>
+
+
+<div class="container-fluid">
+  <div class="hidden-xs vert_line"></div>
+
+  <div class="row">
+    <div class="hidden-xs col-xs-4">
+      <div class="container-fluid padding">
+        <div class="padding-vert">
+          <a href="../widget_pages/widget-list.html">Blog Post</a>
+          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+        </div>
+        <div class="padding-vert">
+          <a href="../widget_pages/widget-list.html">Blogs</a>
+          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+        </div>
+        <div class="padding-vert">
+          <a href="../widget_pages/widget-list.html">Home</a>
+          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+        </div>
+        <div class="padding-vert">
+          <a href="../widget_pages/widget-list.html">About</a>
+          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+        </div>
+        <div class="padding-vert">
+          <a href="../widget_pages/widget-list.html">Contact Us</a>
+          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-8 padding">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" value="Blog Post">
+      </div>
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" class="form-control" id="title" placeholder="Page Title">
+      </div>
+      <a href="page-list.html" class="btn btn-danger btn-block">Delete</a>
+    </div>
+
+  </div>
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+    <div class="navbar-text pull-right">
+      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+    </div>
+  </div>
+</nav>
+
+
+</body>
+</html>
