--- a/public/assignment/page_pages/page-list.html
+++ b/public/assignment/page_pages/page-list.html
@@ -7,3 +7,60 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 </head>
 <body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6 navbar-header">
+        <div class="navbar-brand">
+          <a href="../website_pages/website-list.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="navbar-link" href="../website_pages/website-list.html">Pages</a>
+        </div>
+      </div>
+      <div class="col-xs-6">
+        <p class="navbar-text pull-right">
+          <a href="page-new.html" navbar-link"><span class="glyphicon glyphicon-plus"></span></a>
+        </p>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
+<div class="container-fluid padding">
+  <div class="padding-vert">
+    <a href="../widget_pages/widget-list.html">Blog Post</a>
+    <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="../widget_pages/widget-list.html">Blogs</a>
+    <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="../widget_pages/widget-list.html">Home</a>
+    <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="../widget_pages/widget-list.html">About</a>
+    <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="../widget_pages/widget-list.html">Contact Us</a>
+    <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+</div>
+
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+    <div class="navbar-text pull-right">
+      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+    </div>
+  </div>
+</nav>
+
+
+
+
+</body>
+</html>
