--- a/public/assignment/widget_pages/widget-choose.html
+++ b/public/assignment/widget_pages/widget-choose.html
@@ -7,3 +7,67 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 </head>
 <body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-brand">
+      <a href="widget-list.html" class="navbar-link"><span
+          class="glyphicon glyphicon-chevron-left"></span></a>
+      <a class="navbar-link" href="#">Choose Widget</a>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid padding">
+  <div class="padding-vert">
+    <a href="#">Header</a>
+    <a class="pull-right" href="widget-heading.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">Label</a>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">HTML</a>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">Text Input</a>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">Link</a>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">Button</a>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">Image</a>
+    <a class="pull-right" href="widget-image.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">YouTube</a>
+    <a class="pull-right" href="widget-youtube.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">Data Table</a>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+  <div class="padding-vert">
+    <a href="#">Repeater</a>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a><br>
+  </div>
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+    <div class="navbar-text pull-right">
+      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+    </div>
+  </div>
+</nav>
+
+</body>
+</html>
