--- a/public/assignment/widget_pages/widget-list.html
+++ b/public/assignment/widget_pages/widget-list.html
@@ -7,3 +7,122 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 </head>
 <body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6 navbar-header">
+        <div class="navbar-brand">
+          <a href="../page_pages/page-list.html" class="navbar-link"><span
+              class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="navbar-link" href="#">Widgets</a>
+        </div>
+      </div>
+      <div class="col-xs-6">
+        <p class="navbar-text pull-right">
+          <a class="navbar-link" href="widget-choose.html"><span class="glyphicon glyphicon-plus"></span></a>
+        </p>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
+<div class="container-fluid padding">
+
+  <div class="padding-vert-more">
+    <span class="glyphicon glyphicon-align-justify pull-right"></span>
+    <a class="pull-right" href="widget-heading.html"><span class="glyphicon glyphicon-cog"></span></a>
+    <h1 class="inline">Heading</h1>
+  </div>
+
+  <div class="padding-vert-more">
+    <span class="glyphicon glyphicon-align-justify pull-right"></span>
+    <a class="pull-right" href="widget-image.html"><span class="glyphicon glyphicon-cog"></span></a>
+    <img src="http://i.imgur.com/n5RkuUL.jpg" width="300">
+  </div>
+
+  <div class="padding-vert-more">
+    <span class="glyphicon glyphicon-align-justify pull-right"></span>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a>
+    <h4 class="inline">Label</h4>
+  </div>
+
+  <div class="padding-vert-more">
+    <span class="glyphicon glyphicon-align-justify pull-right"></span>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a>
+    One morning, when
+    <a href="#">Gregor Samsa</a>
+    woke from troubled dreams, he found himself transformed in his bed into a
+    <a href="#">horrible vermin.</a>
+    He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and
+    divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any
+    moment.
+  </div>
+
+  <div class="padding-vert-more">
+    <span class="glyphicon glyphicon-align-justify pull-right"></span>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a>
+    <div class="form-group">
+      <label for="text_input">Text Input</label>
+      <input type="text" class="form-control" id="text_input" placeholder="Text goes here">
+    </div>
+  </div>
+
+  <div class="padding-vert-more">
+    <span class="glyphicon glyphicon-align-justify pull-right"></span>
+    <a class="pull-right" href="widget-youtube.html"><span class="glyphicon glyphicon-cog"></span></a>
+    <iframe width="300" src="https://www.youtube.com/embed/L4GrDOOIIbk" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="padding-vert-more">
+    <span class="glyphicon glyphicon-align-justify pull-right"></span>
+    <a class="pull-right" href="#"><span class="glyphicon glyphicon-cog"></span></a>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+      sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+      sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+      sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+  </div>
+
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6">
+        <div class="navbar-text">
+          <span class="glyphicon glyphicon-play"></span>
+          <span class="glyphicon glyphicon-eye-open"></span>
+        </div>
+      </div>
+      <div class="col-xs-6">
+        <div class="navbar-text pull-right">
+          <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
+</body>
+</html>
