--- a/public/assignment/user_pages/profile.html
+++ b/public/assignment/user_pages/profile.html
@@ -10,16 +10,10 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-6 navbar-header">
         <a class="navbar-brand" href="#">Profile</a>
-      </div>
-      <div class="col-xs-6">
         <p class="navbar-text pull-right">
           <a class="navbar-link" href="#"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
-      </div>
-    </div>
   </div>
 </nav>
 
@@ -55,7 +49,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="#"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
