--- a/public/assignment/website_pages/website-list.html
+++ b/public/assignment/website_pages/website-list.html
@@ -13,13 +13,13 @@
     <div class="row">
       <div class="col-xs-6 navbar-header">
         <div class="navbar-brand">
-          <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a href="../user_pages/profile.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
           <a class="navbar-link" href="#">Websites</a>
         </div>
       </div>
       <div class="col-xs-6">
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="#"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="navbar-link" href="website-new.html"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
     </div>
@@ -27,50 +27,30 @@
 </nav>
 
 
-
-
-<div class="container-fluid link-margin">
-  <div class="row">
-    <div class="col-xs-6">
-      <a href="#">Address Book App</a>
-    </div>
-    <div class="col-xs-6 text-right">
-      <a href="#"><span class="glyphicon glyphicon-cog"></span></a>
-    </div>
+<div class="container-fluid padding">
+  <div class="padding-vert">
+    <a href="../page_pages/page-list.html">Address Book App</a>
+    <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
-  <div class="row">
-    <div class="col-xs-6">
-      <a href="#">Blogger</a>
-    </div>
-    <div class="col-xs-6 text-right">
-      <a href="#"><span class="glyphicon glyphicon-cog"></span></a>
-    </div>
+  <div class="padding-vert">
+    <a href="../page_pages/page-list.html">Blogger</a>
+    <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
-  <div class="row">
-    <div class="col-xs-6">
-      <a href="#">Blogging App</a>
-    </div>
-    <div class="col-xs-6 text-right">
-      <a href="#"><span class="glyphicon glyphicon-cog"></span></a>
-    </div>
+  <div class="padding-vert">
+    <a href="../page_pages/page-list.html">Blogging App</a>
+    <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
-  <div class="row">
-    <div class="col-xs-6">
-      <a href="#">Script Testing App</a>
-    </div>
-    <div class="col-xs-6 text-right">
-      <a href="#"><span class="glyphicon glyphicon-cog"></span></a>
-    </div>
+  <div class="padding-vert">
+    <a href="../page_pages/page-list.html">Script Testing App</a>
+    <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
 </div>
-
-
 
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="#"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
