--- a/public/assignment/widget_pages/widget-youtube.html
+++ b/public/assignment/widget_pages/widget-youtube.html
@@ -7,3 +7,53 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 </head>
 <body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6 navbar-header">
+        <div class="navbar-brand">
+          <a href="widget-list.html" class="navbar-link"><span
+              class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="navbar-link" href="#">Widget Edit</a>
+        </div>
+      </div>
+      <div class="col-xs-6">
+        <p class="navbar-text pull-right">
+          <a class="navbar-link" href="widget-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+        </p>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid padding">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name">
+  </div>
+  <div class="form-group">
+    <label for="title">Text</label>
+    <input type="text" class="form-control" id="title">
+  </div>
+  <div class="form-group">
+    <label for="url">URL</label>
+    <input type="text" class="form-control" id="url" value="https://youtu.be/L4GrDOOIIbk">
+  </div>
+  <div class="form-group">
+    <label for="width">Width</label>
+    <input type="text" class="form-control" id="width">
+  </div>
+  <a href="widget-list.html" class="btn btn-danger btn-block">Delete</a>
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+    <div class="navbar-text pull-right">
+      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+    </div>
+  </div>
+</nav>
+
+</body>
+</html>
