new index.html and added app.js

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -1,42 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="WebAppMaker">
 <head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assignment Home Page</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>WebApp Maker</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- Custom styles for this template -->
+    <link href="../css/style.css" rel="stylesheet">
+    <!-- jQuery and Angular CDNs -->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <!-- Angular source files -->
+    <script src="app.js"></script>
 </head>
 <body>
-
-<div class="container-fluid">
-  <h1>Assignment Home Page</h1>
-  <h4>User Pages</h4>
-  <ul>
-    <li><a href="user_pages/login.html">login.html</a></li>
-    <li><a href="user_pages/profile.html">profile.html</a></li>
-    <li><a href="user_pages/register.html">register.html</a></li>
-  </ul>
-  <h4>Page Pages</h4>
-  <ul>
-    <li><a href="page_pages/page-edit.html">page-edit.html</a></li>
-    <li><a href="page_pages/page-list.html">page-list.html</a></li>
-    <li><a href="page_pages/page-new.html">page-new.html</a></li>
-  </ul>
-  <h4>Website Pages</h4>
-  <ul>
-    <li><a href="website_pages/website-edit.html">website-edit.html</a></li>
-    <li><a href="website_pages/website-list.html">website-list.html</a></li>
-    <li><a href="website_pages/website-new.html">website-new.html</a></li>
-  </ul>
-  <h4>Widget Pages</h4>
-  <ul>
-    <li><a href="widget_pages/widget-choose.html">widget-choose.html</a></li>
-    <li><a href="widget_pages/widget-heading.html">widget-heading.html</a></li>
-    <li><a href="widget_pages/widget-image.html">widget-image.html</a></li>
-    <li><a href="widget_pages/widget-list.html">widget-list.html</a></li>
-    <li><a href="widget_pages/widget-youtube.html">widget-youtube.html</a></li>
-  </ul>
-</div>
-
+CONTENT ~*~*~*~*~*~*
+<input type="text" value="meow">
 </body>
 </html>
