renamed folders containing html pages

--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -14,20 +14,20 @@
 
       <div class="col-xs-4 container-fluid">
         <div class="navbar-brand">
-          <a href="page-list.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
-          <a class="navbar-link" href="#">Pages</a>
+          <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a class="navbar-link" href="website-list.html">Websites</a>
         </div>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="page-new.html"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="navbar-link" href="website-new.html"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
 
       <div class="col-xs-8 container-fluid">
         <div class="navbar-brand">
-          <a class="navbar-link" href="page-edit.html">Edit Page</a>
+          <a class="navbar-link" href="#">New Website</a>
         </div>
         <p class="navbar-text pull-right">
-          <a class="navbar-link" href="page-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+          <a class="navbar-link" href="website-list.html"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
       </div>
 
@@ -40,15 +40,14 @@
     <div class="container-fluid">
       <div class="navbar-brand">
         <a class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
-        <a class="navbar-link" href="page-list.html">Edit Page</a>
+        <a class="navbar-link" href="website-list.html">New Website</a>
       </div>
       <p class="navbar-text pull-right">
-        <a class="navbar-link" href="page-list.html"><span class="glyphicon glyphicon-ok"></span></a>
+        <a class="navbar-link" href=website-list.html><span class="glyphicon glyphicon-ok"></span></a>
       </p>
     </div>
   </nav>
 </div>
-
 
 <div class="container-fluid">
   <div class="hidden-xs vert_line"></div>
@@ -57,24 +56,20 @@
     <div class="hidden-xs col-xs-4">
       <div class="container-fluid padding">
         <div class="padding-vert">
-          <a href="../widget_pages/widget-list.html">Blog Post</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../page/page-list.html">Address Book App</a>
+          <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../widget_pages/widget-list.html">Blogs</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../page/page-list.html">Blogger</a>
+          <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../widget_pages/widget-list.html">Home</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../page/page-list.html">Blogging App</a>
+          <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
         <div class="padding-vert">
-          <a href="../widget_pages/widget-list.html">About</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
-        </div>
-        <div class="padding-vert">
-          <a href="../widget_pages/widget-list.html">Contact Us</a>
-          <a class="pull-right" href="page-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
+          <a href="../page/page-list.html">Script Testing App</a>
+          <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
         </div>
       </div>
     </div>
@@ -82,13 +77,12 @@
     <div class="col-xs-12 col-sm-8 padding">
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" value="Blog Post">
+        <input type="text" class="form-control" id="name" placeholder="Name">
       </div>
       <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" class="form-control" id="title" placeholder="Page Title">
+        <label for="description">Description</label>
+        <textarea class="form-control" id="description" placeholder="Description" rows="5"></textarea>
       </div>
-      <a href="page-list.html" class="btn btn-danger btn-block">Delete</a>
     </div>
 
   </div>
@@ -97,11 +91,10 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
-
 
 </body>
 </html>
