--- a/public/assignment/widget/widget-choose.html
+++ b/public/assignment/widget/widget-choose.html
@@ -64,7 +64,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
