--- a/public/assignment/index.old.html
+++ b/public/assignment/index.old.html
@@ -12,29 +12,29 @@
   <h1>Assignment Home Page</h1>
   <h4>User Pages</h4>
   <ul>
-    <li><a href="user_pages/login.html">login.html</a></li>
-    <li><a href="user_pages/profile.html">profile.html</a></li>
-    <li><a href="user_pages/register.html">register.html</a></li>
+    <li><a href="user/login.html">login.html</a></li>
+    <li><a href="user/profile.html">profile.html</a></li>
+    <li><a href="user/register.html">register.html</a></li>
   </ul>
   <h4>Page Pages</h4>
   <ul>
-    <li><a href="page_pages/page-edit.html">page-edit.html</a></li>
-    <li><a href="page_pages/page-list.html">page-list.html</a></li>
-    <li><a href="page_pages/page-new.html">page-new.html</a></li>
+    <li><a href="page/page-edit.html">page-edit.html</a></li>
+    <li><a href="page/page-list.html">page-list.html</a></li>
+    <li><a href="page/page-new.html">page-new.html</a></li>
   </ul>
   <h4>Website Pages</h4>
   <ul>
-    <li><a href="website_pages/website-edit.html">website-edit.html</a></li>
-    <li><a href="website_pages/website-list.html">website-list.html</a></li>
-    <li><a href="website_pages/website-new.html">website-new.html</a></li>
+    <li><a href="website/website-edit.html">website-edit.html</a></li>
+    <li><a href="website/website-list.html">website-list.html</a></li>
+    <li><a href="website/website-new.html">website-new.html</a></li>
   </ul>
   <h4>Widget Pages</h4>
   <ul>
-    <li><a href="widget_pages/widget-choose.html">widget-choose.html</a></li>
-    <li><a href="widget_pages/widget-heading.html">widget-heading.html</a></li>
-    <li><a href="widget_pages/widget-image.html">widget-image.html</a></li>
-    <li><a href="widget_pages/widget-list.html">widget-list.html</a></li>
-    <li><a href="widget_pages/widget-youtube.html">widget-youtube.html</a></li>
+    <li><a href="widget/widget-choose.html">widget-choose.html</a></li>
+    <li><a href="widget/widget-heading.html">widget-heading.html</a></li>
+    <li><a href="widget/widget-image.html">widget-image.html</a></li>
+    <li><a href="widget/widget-list.html">widget-list.html</a></li>
+    <li><a href="widget/widget-youtube.html">widget-youtube.html</a></li>
   </ul>
 </div>
 
