--- a/public/assignment/user/profile.html
+++ b/public/assignment/user/profile.html
@@ -40,7 +40,7 @@
   </form>
 
   <a class="btn btn-primary btn-block"
-     href="../website_pages/website-list.html">Websites</a>
+     href="../website/website-list.html">Websites</a>
   <a class="btn btn-danger  btn-block"
      href="login.html">Logout</a>
 
@@ -49,7 +49,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="/profile.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
