--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-xs-6 navbar-header">
         <div class="navbar-brand">
-          <a href="../user_pages/profile.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
+          <a href="../user/profile.html" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
           <a class="navbar-link" href="#">Websites</a>
         </div>
       </div>
@@ -29,19 +29,19 @@
 
 <div class="container-fluid padding">
   <div class="padding-vert">
-    <a href="../page_pages/page-list.html">Address Book App</a>
+    <a href="../page/page-list.html">Address Book App</a>
     <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
   <div class="padding-vert">
-    <a href="../page_pages/page-list.html">Blogger</a>
+    <a href="../page/page-list.html">Blogger</a>
     <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
   <div class="padding-vert">
-    <a href="../page_pages/page-list.html">Blogging App</a>
+    <a href="../page/page-list.html">Blogging App</a>
     <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
   <div class="padding-vert">
-    <a href="../page_pages/page-list.html">Script Testing App</a>
+    <a href="../page/page-list.html">Script Testing App</a>
     <a class="pull-right" href="website-edit.html"><span class="glyphicon glyphicon-cog"></span></a><br>
   </div>
 </div>
@@ -50,7 +50,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
-      <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+      <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
 </nav>
