--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-xs-6 navbar-header">
         <div class="navbar-brand">
-          <a href="../page_pages/page-list.html" class="navbar-link"><span
+          <a href="../page/page-list.html" class="navbar-link"><span
               class="glyphicon glyphicon-chevron-left"></span></a>
           <a class="navbar-link" href="#">Widgets</a>
         </div>
@@ -117,7 +117,7 @@
       </div>
       <div class="col-xs-6">
         <div class="navbar-text pull-right">
-          <a href="../user_pages/profile.html"><span class="glyphicon glyphicon-user"></span></a>
+          <a href="../user/profile.html"><span class="glyphicon glyphicon-user"></span></a>
         </div>
       </div>
     </div>
