--- a/public/assignment/index.old.html
+++ b/public/assignment/index.old.html
@@ -12,29 +12,29 @@
   <h1>Assignment Home Page</h1>
   <h4>User Pages</h4>
   <ul>
-    <li><a href="user/login.html">login.html</a></li>
-    <li><a href="user/profile.html">profile.html</a></li>
-    <li><a href="user/register.html">register.html</a></li>
+    <li><a href="views/user/login.view.client.html">login.html</a></li>
+    <li><a href="views/user/profile.view.client.html">profile.html</a></li>
+    <li><a href="views/user/register.view.client.html">register.html</a></li>
   </ul>
   <h4>Page Pages</h4>
   <ul>
-    <li><a href="page/page-edit.html">page-edit.html</a></li>
-    <li><a href="page/page-list.html">page-list.html</a></li>
-    <li><a href="page/page-new.html">page-new.html</a></li>
+    <li><a href="views/page/page-edit.view.client.html">page-edit.html</a></li>
+    <li><a href="views/page/page-list.view.client.html">page-list.html</a></li>
+    <li><a href="views/page/page-new.view.client.html">page-new.html</a></li>
   </ul>
   <h4>Website Pages</h4>
   <ul>
-    <li><a href="website/website-edit.html">website-edit.html</a></li>
-    <li><a href="website/website-list.html">website-list.html</a></li>
-    <li><a href="website/website-new.html">website-new.html</a></li>
+    <li><a href="views/website/website-edit.view.client.html">website-edit.html</a></li>
+    <li><a href="views/website/website-list.view.client.html">website-list.html</a></li>
+    <li><a href="views/website/website-new.view.client.html">website-new.html</a></li>
   </ul>
   <h4>Widget Pages</h4>
   <ul>
-    <li><a href="widget/widget-choose.html">widget-choose.html</a></li>
-    <li><a href="widget/widget-heading.html">widget-heading.html</a></li>
-    <li><a href="widget/widget-image.html">widget-image.html</a></li>
-    <li><a href="widget/widget-list.html">widget-list.html</a></li>
-    <li><a href="widget/widget-youtube.html">widget-youtube.html</a></li>
+    <li><a href="views/widget/widget-choose.view.client.html">widget-choose.html</a></li>
+    <li><a href="views/widget/widget-heading.view.client.html">widget-heading.html</a></li>
+    <li><a href="views/widget/widget-image.view.client.html">widget-image.html</a></li>
+    <li><a href="views/widget/widget-list.view.client.html">widget-list.html</a></li>
+    <li><a href="views/widget/widget-youtube.view.client.html">widget-youtube.html</a></li>
   </ul>
 </div>
 
