implement ngroute routeprovider in config.js

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -14,11 +14,12 @@
     <!-- jQuery and Angular CDNs -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
     <!-- Angular source files -->
     <script src="app.js"></script>
+    <script src="config.js"></script>
 </head>
 <body>
-CONTENT ~*~*~*~*~*~*
-<input type="text" value="meow">
+<div ng-view></div>
 </body>
 </html>
