--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -18,6 +18,13 @@
     <!-- Angular source files -->
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <!-- Angular controllers -->
+    <script src="views/user/login.controller.client.js"></script>
+    <script src="views/user/profile.controller.client.js"></script>
+    <script src="views/user/register.controller.client.js"></script>
+    <script src="views/website/website.controller.client.js"></script>
+    <script src="views/page/page.controller.client.js"></script>
+    <script src="views/widget/widget.controller.client.js"></script>
 </head>
 <body>
 <div ng-view></div>
