--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mike Knitz CS 5610</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="style.css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mike Knitz CS 5610</title>
+    <link rel="stylesheet" type="text/css"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="main">
-  <h1>Mike Knitz CS 5610</h1>
-  <h4>Coursework for the Fall 2016 semester</h4>
-  <ul>
-    <li>
-      <a href="project/index.html">Project</a>
-    </li>
-    <li>
-      <a href="assignment">Assignment</a>
-    </li>
-    <li>
-      <a href="test/index.html">Test MongoDB</a>
-    </li>
-    <li>
-      <a href="https://github.com/mikeknitz/knitz-michael-webdev">Github Repository</a>
-    </li>
-  </ul>
+    <h1>Mike Knitz CS 5610</h1>
+    <h4>Coursework for the Fall 2016 semester</h4>
+    <ul>
+        <li>
+            <a href="project/index.html">Project</a>
+        </li>
+        <li>
+            <a href="assignment">Assignment</a>
+        </li>
+        <li>
+            <a href="test/index.html">Test MongoDB</a>
+        </li>
+        <li>
+            <a href="https://github.com/mikeknitz/knitz-michael-webdev">Github
+                Repository</a>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
