--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -18,18 +18,27 @@
     <!-- Angular source files -->
     <script src="app.js"></script>
     <script src="config.js"></script>
-    <!-- Angular controllers -->
-    <script src="views/user/login.controller.client.js"></script>
-    <script src="views/user/profile.controller.client.js"></script>
-    <script src="views/user/register.controller.client.js"></script>
-    <script src="views/website/website.controller.client.js"></script>
-    <script src="views/page/page.controller.client.js"></script>
-    <script src="views/widget/widget.controller.client.js"></script>
     <!-- Angular services -->
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
+    <!-- views/user controllers -->
+    <script src="views/user/login.controller.client.js"></script>
+    <script src="views/user/profile.controller.client.js"></script>
+    <script src="views/user/register.controller.client.js"></script>
+    <!-- views/page controllers -->
+    <script src="views/page/page-edit.controller.client.js"></script>
+    <script src="views/page/page-list.controller.client.js"></script>
+    <script src="views/page/page-new.controller.client.js"></script>
+    <!-- views/website controllers -->
+    <script src="views/website/website-edit.controller.client.js"></script>
+    <script src="views/website/website-list.controller.client.js"></script>
+    <script src="views/website/website-new.controller.client.js"></script>
+    <!-- views/widget controllers -->
+    <script src="views/widget/widget-edit.controller.client.js"></script>
+    <script src="views/widget/widget-list.controller.client.js"></script>
+    <script src="views/widget/widget-new.controller.client.js"></script>
 </head>
 <body>
 <div ng-view></div>
