--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -8,17 +8,13 @@
     <title>WebApp Maker</title>
 
     <!-- Bootstrap core CSS -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="../bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
     <!-- jQuery and Angular CDNs -->
-    <!--<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>-->
-    <script src="../jquery-1.12.4.js"></script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>-->
-    <script src="../angular.min.js"></script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>-->
-    <script src="../angular-route.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
     <!-- Angular source files -->
     <script src="app.js"></script>
     <script src="config.js"></script>
